# ChatiChatou

./: Cargo.toml  docker-compose.yaml
backend/chat-service/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  dev-requirements.in  dev-requirements.txt  dump.rdb  requirements.in  wsgi.py
backend/chat-service/chat/: main.py
backend/chat-service/chat/infrastructure/: logger.py
backend/chat-service/chat/interfaces/: redispool.py
backend/chat-service/local/: dev.mk  docker-compose.yaml  init.mk
backend/chat-service/local/chat/: Dockerfile
client/: package.json
client/src/: App.tsx  index.css  index.tsx
client/src/components/: Chat.tsx  FollowedChannelsList.tsx  Stream.tsx  StreamsListSidebar.tsx  TabPanel.tsx  Toolbar.tsx  TopNavBar.tsx  index.tsx
client/src/components/LeftSidebar/: FollowedChannelsList.tsx  RecommandedChannelsList.tsx  index.tsx
client/src/components/TopNavBar/: ConnectModal.tsx  index.tsx
client/src/hooks/: index.tsx
client/src/services/: client.ts  index.ts  userService.ts
client/src/services/_mocks/: data.json  routes.json
client/src/store/: channel.ts  connectView.test.ts  connectView.ts  global.test.ts  global.ts  index.ts  store.ts  storeModel.ts  streamView.test.ts  streamView.ts  user.test.ts  user.ts
client/src/views/: StreamView.tsx  index.tsx
server/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
server/migrations/2020-04-16-200309_users/: up.sql
server/src/: auth_handler.rs  errors.rs  main.rs  models.rs  register_handler.rs  schema.rs  utils.rs
src/: main.rs  server.rs
(+22 files in other folders)
