[package]
name = "twitch-clone"
version = "0.1.0"
authors = ["Dentan Aurélien <aurelien.dentan@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rand = "0.6"
futures = "0.1.24"
actix = "0.8.2"
actix-web = "1.0"
actix-files = "0.1"
actix-web-actors = "1.0"
actix-broker = "0.2.0"
log = "0.4.5"
simple_logger = "0.5.0"
serde_json = "1.0"
