[package]
name = "twitch-clone"
version = "0.1.0"
authors = ["Dentan Aurélien <aurelien.dentan@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.2.0"
actix-identity = "0.2.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
argonautica = "0.2.0"
chrono = { version = "0.4.6", features = ["serde"] }
derive_more = "0.99.0"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
futures = "0.3.1"
r2d2 = "0.8"
lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"
log = "0.4.1"